# devil_server

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  devild.json  devild.service  evil_server.json
lib/azmq/azmq/: socket.hpp
lib/azmq/azmq/detail/: socket_ops.hpp  socket_service.hpp
src/: CMakeLists.txt  devil_monitor_servers.cpp  devil_observe_devices.cpp  devil_server.cpp  devild.cpp  evil_monitor_servers.cpp  evil_observe_devices.cpp  evil_server.cpp  fliquer_fake_resource.cpp  fliquer_observe.cpp
src/devil/: CMakeLists.txt  Channel.hpp  ChannelServer.cpp  ChannelServer.hpp  DeviceObserver.cpp  DeviceObserver.hpp  DualChannelAdapter.cpp  DualChannelAdapter.hpp  Evil2Adapter.cpp  Evil2Adapter.hpp  HardwareChannel.hpp  NetworkChannel.cpp  NetworkChannel.hpp  PerformanceCounters.hpp  RpcInterface.cpp  RpcInterface.hpp  SerialChannel.cpp  SerialChannel.hpp  SerialConnection.cpp  SerialConnection.hpp  Server.cpp  Server.hpp  ZmqSocket.cpp  ZmqSocket.hpp
src/evil/: CMakeLists.txt  DeviceObserver.cpp  DeviceObserver.hpp  Evil2Adapter.cpp  Evil2Adapter.hpp  HardwareChannel.hpp  NetworkChannel.cpp  NetworkChannel.hpp  PerformanceCounters.hpp  RpcInterface.cpp  RpcInterface.hpp  SerialConnection.cpp  SerialConnection.hpp  Server.cpp  Server.hpp  ZmqSocket.cpp  ZmqSocket.hpp
src/fliquer/: CMakeLists.txt  fliquer.cpp  fliquer.hpp
